...
        let tintableImage = backArrowImage.withRenderingMode(.alwaysTemplate)
        let rotatedImage = UIImage(cgImage: tintableImage.cgImage!, scale: 0, orientation: .down)
        middleRightButton.setImage(rotatedImage, for: .normal)
        let inset: CGFloat = 22
        middleRightButton.imageEdgeInsets = UIEdgeInsets(top: inset, left: inset, bottom: inset, right: inset)
        middleRightButton.tintColor = .akLight
        middleRightButton.accessibilityIdentifier = "customNextButton"
        middleRightButton.addTarget(self, action: #selector(postNextKeyDidPressNotification), for: .touchUpInside)
    }
    
    @objc func postNextKeyDidPressNotification() {
        NotificationCenter.default.post(name: .keyboardsNextButtonDidPress, object: nil)
    }
...
