...
        // Target active textField
        guard let activeTextField = UIResponder.currentFirst() as? UITextField else {
            preconditionFailure("No textfield to write in")
        }
        
        switch keyName {
        case "OK":
            OKHandler()
        case "B": // Back
            activeTextField.deleteBackward()
        default:
            activeTextField.insertText(keyName.uppercased())
        }
...
